// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with help text 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="checkbox-group-49-label-54"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="checkbox-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="checkbox-group-49-label-54"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              >
                , Select one
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Mango
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Orange
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="BaseBox-bmPWx gnjvtY"
          data-blade-component="base-box"
        >
          <span
            class="BaseBox-bmPWx fSbYvl"
            data-blade-component="base-box"
            style="word-break: break-all;"
          >
            <span
              class="StyledBaseText-dVBfTO eZXGXv"
              data-blade-component="base-text"
            >
              Select one
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> should render with label 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="checkbox-group-19-label-24"
      class="BaseBox-bmPWx xrMLB"
      data-blade-component="checkbox-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="checkbox-group-19-label-24"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eeqPab"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO gaMIEc"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
              data-blade-component="visually-hidden"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              >
                , 
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx xrMLB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Apple
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Mango
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx cCNoRc"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx"
              data-blade-component="checkbox"
            >
              <label
                class="SelectorLabelweb__StyledSelectorLabel-sc-1yoi09a-0 bgSmPY"
                data-blade-component="checkbox-label"
              >
                <div
                  class="BaseBox-bmPWx xrMLB"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx fSbYvl"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="SelectorInputweb__StyledInput-sc-1bnkrae-0 eWXntk"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="CheckboxIconWrapperweb__CheckboxIconWrapper-sc-3hpze0-0 hMvCxW"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0"
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(220, 27%, 98%, 1)"
                            fill-rule="evenodd"
                            stroke="white"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="Fadeweb__AnimatedFade-sc-1h424tv-0 fqlNJV"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="BaseBox-bmPWx bigiAM"
                      data-blade-component="base-box"
                    />
                    <div
                      class="StyledBaseText-dVBfTO ktUwvA"
                      data-blade-component="base-text"
                    >
                      Orange
                    </div>
                  </div>
                  <div
                    class="BaseBox-bmPWx cCkEge"
                    data-blade-component="base-box"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
